--- a/views/video.html
+++ b/views/video.html
@@ -32,25 +32,30 @@
         <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
         <script>
             var client = new WebTorrent()
-            // Sintel, a free, Creative Commons movie
-            var torrentId = 'magnet:?xt=urn:btih:08ada5a7a6183aae1e09d831df6748d566095a10&dn=Sintel&tr=udp%3A%2F%2Fexplodie.org%3A6969&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969&tr=udp%3A%2F%2Ftracker.empire-js.us%3A1337&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337&tr=wss%3A%2F%2Ftracker.btorrent.xyz&tr=wss%3A%2F%2Ftracker.fastcast.nz&tr=wss%3A%2F%2Ftracker.openwebtorrent.com&ws=https%3A%2F%2Fwebtorrent.io%2Ftorrents%2F&xs=https%3A%2F%2Fwebtorrent.io%2Ftorrents%2Fsintel.torrent'
-            client.add(torrentId, function (torrent) {
-              // Torrents can contain many files. Let's use the .mp4 file
-              var file = torrent.files.find(function (file) {
-                return file.name.endsWith('.mp4')
-              })
-              // Display the file by adding it to the DOM.
-              // Supports video, audio, image files, and more!
-              file.autoplay = false;
-              // TODO: use callback to notify other user of new viewer.
-              file.renderTo('video#v', {"autoplay": false}, function(err, elem) {
-                if (err) throw err;
-                console.log("Element added with content", elem)
-              });
-            })
+            // Sintel, a free, Creative Commons movie            
             $(function () {
-                var socket = io();
+                var renderedFlag = false;
+                var socket = io('/' + window.location.pathname.split("/")[2]);
                 var v = document.getElementById("v");
+                console.log('running')
+                socket.on("magnet", function(torrentId){
+                    console.log("magnet received")
+                    client.add(torrentId, function (torrent) {
+                        // Torrents can contain many files. Let's use the .mp4 file
+                        var file = torrent.files.find(function (file) {
+                            return file.name.endsWith('.mp4')
+                        })
+                        // Display the file by adding it to the DOM.
+                        // Supports video, audio, image files, and more!
+                        file.autoplay = false;
+                        // TODO: use callback to notify other user of new viewer.
+                        file.renderTo('video#v', {"autoplay": false}, function(err, elem) {
+                            if (err) throw err;
+                            console.log("Element added with content", elem)
+                        });
+                    })
+                })
+
                 v.onpause = function(){
                     socket.emit('pause');
                 }
