--- a/views/index.html
+++ b/views/index.html
@@ -1,26 +1,28 @@
 <!doctype html>
 <html>
     <head>
-        <title>Socket.IO chat</title>
-        <style>
-            * { margin: 0; padding: 0; box-sizing: border-box;  }
-            body { font: 13px Helvetica, Arial; }
-            form { background: #000; padding: 3px; position: fixed; bottom: 0; 
-                width: 100%;  }
-            form input { border: 0; padding: 10px; width: 90%; 
-                margin-right: .5%;  }
-            form button { width: 9%; background: rgb(130, 224, 255); 
-                border: none; padding: 10px;  }
-            #messages { list-style-type: none; margin: 0; padding: 0;  }
-            #messages li { padding: 5px 10px;  }
-            #messages li:nth-child(odd) { background: #eee;  }
-        </style>
+        <title>Ditto</title>
+        <base href="/">
         <script src="https://cdn.jsdelivr.net/webtorrent/latest/webtorrent.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/css/index.css">
     </head>
     <body>
-        <form action="">
-            <input id="m" autocomplete="off" /><button>Send</button>
-        </form>
+        <div id="main" class="container">
+            <div class="col-lg-8">
+                <p class="shouty"><span class="name">Ditto</span> lets you watch movies with people.</p>
+                <p>Enter a torrent magnet link below to generate a secret temporary theater.<br>Playback controls (pause, play, skip) are shared in real time.</p>
+                <form action="">
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon1">magnet</span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="magnet:" aria-label="Magnet" aria-describedby="basic-addon1" spellcheck="false" id="m">
+                    </div>
+                </form>
+            </div>
+        </div>
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
         <script>
