--- a/views/video.html
+++ b/views/video.html
@@ -1,36 +1,30 @@
 <!doctype html>
 <html>
     <head>
-        <title>Socket.IO chat</title>
-        <style>
-            * { margin: 0; padding: 0; box-sizing: border-box;  }
-            body { font: 13px Helvetica, Arial; }
-            form { background: #000; padding: 3px; position: fixed; bottom: 0; 
-                width: 100%;  }
-            form input { border: 0; padding: 10px; width: 90%; 
-                margin-right: .5%;  }
-            form button { width: 9%; background: rgb(130, 224, 255); 
-                border: none; padding: 10px;  }
-            #messages { list-style-type: none; margin: 0; padding: 0;  }
-            #messages li { padding: 5px 10px;  }
-            #messages li:nth-child(odd) { background: #eee;  }
-        </style>
+        <title>Ditto</title>
+        <base href="/">
         <script src="https://cdn.jsdelivr.net/webtorrent/latest/webtorrent.min.js"></script>
+        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/css/video.css">
     </head>
     <body>
-        <video id="v" width="100%" controls>
-            Your browser does not support the video tag.
-        </video>
-        <!-- <div id="video">
-            Gets populated by webtorrent
-        </div> -->
-        <ul id="messages"></ul>
+        <div id="viewer">
+            <video id="v" width="100%" controls>
+                Your browser does not support the video tag.
+            </video>
+        </div>
+        <div id="share">
+            <p>Don't watch alone! Send this link to a friend:</p>
+            <textarea readonly type="text" maxlength="10000000" id="tempalink" onclick="this.focus();this.select()"></textarea>
+        </div>
+        <!-- <ul id="messages"></ul>
         <form action="">
             <input id="m" autocomplete="off" /><button>Send</button>
-        </form>
+        </form> -->
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
         <script>
+            document.getElementById("tempalink").value = window.location.href;
             var client = new WebTorrent()
             // Sintel, a free, Creative Commons movie            
             $(function () {
@@ -62,18 +56,14 @@
                 v.onplay = function(){
                     socket.emit('play', v.currentTime);
                 }
-                $('form').submit(function(){
-                    socket.emit('chat message', $('#m').val());
-                    $('#m').val('');
-                    return false;
-                });
-                socket.on('chat message', function(msg){
-                    // if (msg === "pp") {
-                    //     if (v.paused) v.play();
-                    //     else v.pause();
-                    // }
-                    $('#messages').append($('<li>').text(msg));
-                })
+                // $('form').submit(function(){
+                //     socket.emit('chat message', $('#m').val());
+                //     $('#m').val('');
+                //     return false;
+                // });
+                // socket.on('chat message', function(msg){
+                //     $('#messages').append($('<li>').text(msg));
+                // })
                 socket.on('pause', function(){
                     v.pause()
                 })
