--- a/views/index.html
+++ b/views/index.html
@@ -21,8 +21,10 @@
                         <input type="text" class="form-control" placeholder="magnet:" aria-label="Magnet" aria-describedby="basic-addon1" spellcheck="false" id="m">
                     </div>
                 </form>
+                <p class="quiet"><a href="http://lukasschwab.me">Lukas Schwab</a> &middot; <a href="https://github.com/lukasschwab/ditto">Ditto on GitHub</a></p>
             </div>
         </div>
+
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
         <script>
