Use broadcast instead of nsp.emit

--- a/views/index.html
+++ b/views/index.html
@@ -24,7 +24,7 @@
                 <p class="quiet"><a href="http://lukasschwab.me">Lukas Schwab</a> &middot; <a href="https://github.com/lukasschwab/ditto">Ditto on GitHub</a></p>
             </div>
         </div>
-
+        <!-- TODO: Refactor out the scripts. -->
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
         <script>
